--- a/web/Project.xhtml
+++ b/web/Project.xhtml
@@ -10,7 +10,7 @@
     <h:body>
         <h:form>
             <b:container>
-                <b:navBar fixed="top" class="text-center">
+                <b:navBar class="text-center">
                     <h1 style="text-align:center">#{projects.currentProject.projectName}</h1>
                 </b:navBar>
                 <b:row style="margin-top: 12%">  
