--- a/web/CreateProject.xhtml
+++ b/web/CreateProject.xhtml
@@ -30,10 +30,10 @@
                         </b:column>
                     </b:row>
                     <b:row style="margin-top: 1%">
-                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="3" style="padding-right: 0 !important">
+                        <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="3" style="padding-right: 0 !important; margin-right: 1.4%">
                             <h:outputText value="Start Date:"/>
                         </b:column >
-                        <b:column tiny-screen="6" medium-screen="4" large-screen="3">
+                        <b:column tiny-screen="6" medium-screen="4" large-screen="3" style="border: 2px solid #19334d; padding:0 !important">
                             <b:datepicker value="#{projects.currentProject.startDate}" />
                         </b:column>
                     </b:row>
