Fixed Header for Login, Account, CreateAccount, EditAccount, EditProject

--- a/web/Account.xhtml
+++ b/web/Account.xhtml
@@ -12,14 +12,14 @@ and open the template in the editor.
     <h:head>
         <title>#{login.currentUser.lastNameFirstName()} </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <b:navBar class="text-center">
+            <h1 style="text-align:center">#{login.currentUser.firstNameLastName()}</h1>
+        </b:navBar>
     </h:head>
     <h:body>
         <h:form>
             <b:container>
-                <b:navBar fixed="top" class="text-center">
-                    <h1 style="text-align:center">#{login.currentUser.firstNameLastName()}</h1>
-                </b:navBar>
-                <b:row style="margin-top: 10%;  padding: 2%">  
+                <b:row style="margin-top: 2%;  padding: 2%">  
                     <b:column tiny-screen="6" medium-screen="6" large-screen="6">  
                         <ul style="list-style-type: none; background-color: #4E5D6C; padding: 2%">
                             <li>ID: #{login.currentUser.id}</li>
