--- a/web/EditAccount.xhtml
+++ b/web/EditAccount.xhtml
@@ -11,14 +11,14 @@ and open the template in the editor.
     <h:head>
         <title>Think Inc Manager</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <b:navBar class="text-center">
+            <h1 style="text-align:center">Edit User</h1>
+        </b:navBar>
     </h:head>
     <h:body>
-         <b:navBar fixed="top" class="text-center">
-          <h1 style="text-align:center">Edit User</h1>
-        </b:navBar>
         <h:form>
             <b:container>
-                <b:row style="margin-top:12%">
+                <b:row style="margin-top:2%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="4" style="padding-right: 0 !important">
                         <h:outputText value="Email:"/>
                     </b:column >
@@ -75,7 +75,7 @@ and open the template in the editor.
             </b:container>
         </h:form>
         <b:navBar fixed="bottom" class="text-center">
-        <h4 style="text-align:center">@2016 Think Inc.</h4>
+            <h4 style="text-align:center">@2016 Think Inc.</h4>
         </b:navBar>
     </h:body>
 </html>
