--- a/web/EditProject.xhtml
+++ b/web/EditProject.xhtml
@@ -5,14 +5,14 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html">
     <h:head>
         <title>Think Inc</title>
+        <b:navBar class="text-center">
+            <h1 style="text-align:center">Project Creation</h1>
+        </b:navBar>
     </h:head>
     <h:body>
         <h:form>
             <b:container>
-                <b:navBar fixed="top" class="text-center">
-                    <h1 style="text-align:center">Project Creation</h1>
-                </b:navBar>
-                <b:row style="margin-top: 15%">
+                <b:row style="margin-top: 2%">
                     <b:column tiny-screen="2" medium-screen="1" large-screen="1" offset="3" style="padding-right: 0 !important">
                         <h:outputText value="Project Name:"/>
                     </b:column >
